Fixed cover image tinting issue in dark mode

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2170,6 +2170,10 @@ html.dark-mode .site-header-content {
     color: #fff;
 }
 
+html.dark-mode .site-header-cover {
+    opacity: 1;
+}
+
 html.dark-mode .post-card-image {
     background: var(--color-darkmode);
 }
@@ -2360,6 +2364,10 @@ html.dark-mode .footer-cta-title {
 
     html.auto-color .site-header-content {
         color: #fff;
+    }
+
+    html.auto-color .site-header-cover {
+        opacity: 1;
     }
 
     html.auto-color .post-card-image {
